--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,6 @@ body {
     padding: 0;
 }
 
-/* Styling for <h0> elements */
-h0 {
-    color: #5d6d7e; /* Corrected color code */
-    text-align: center; /* Matches <p> alignment */
-    padding: 20px;
-    margin: 20px auto; /* Matching margin with <p> */
-    max-width: 800px; /* Matching width with <p> */
-
 /* Styling for <h1> elements */
 h1 {
     color: #5d6d7e; /* Corrected color code */
@@ -27,16 +19,16 @@ h1 {
 /* Styling for <h2> elements */
 h2 {
     color: #5d6d7e; /* Corrected color code */
-    text-align: center; /* Matches <p> alignment */
+    text-align: left; /* Align text to the left */
     padding: 20px;
-    margin: 20px auto; /* Matching margin with <p> */
+    margin: 20px 0; /* Adjust margin as needed */
     max-width: 800px; /* Matching width with <p> */
 }
 
 /* Styling for <p> elements */
 p {
     max-width: 800px; /* Matching width with <h2> */
-    margin: 20px auto; /* Centering <p> horizontally with margin */
+    margin: 20px auto; /* Centering <p> horizontally */
     line-height: 1.6;
     padding: 0 20px; /* Padding inside <p> */
 }
