--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 
 /* Styling for <h1> elements */
 h1 {
-    color: #5d6d7e; /* Corrected color code */
+    color: #000080; /* Corrected color code */
     text-align: center;
     padding: 20px;
     margin: 0 auto;
@@ -18,7 +18,7 @@ h1 {
 
 /* Styling for <h2> elements */
 h2 {
-    color: #5d6d7e; /* Corrected color code */
+    color: #000080; /* Corrected color code */
     text-align: left; /* Align text to the left */
     padding: 20px;
     margin: 20px 0; /* Adjust margin as needed */
