--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ h2 {
     padding: 20px;
 }
 
+h3 {
+    font-size: 1.5em;
+    color: #2e4053;
+    text-align: left;
+    padding: 20px;
+
 p {
     max-width: 800px;
     margin: 20px auto;
